:lipstick: Correct NavBar padding on mobile version

--- a/src/components/Nav/Nav.module.scss
+++ b/src/components/Nav/Nav.module.scss
@@ -13,7 +13,7 @@
 
     @media (min-width: $breakpoint-medium) {
       flex-direction: row;
-      padding: 1.5rem 3rem;
+      padding: 1.5rem 2rem;
     }
   }
 
